# claude-sandbox

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  sandbox-test.sh
assets/: .gitconfig  CLAUDE.md  Containerfile  Containerfile.monitor  claude.json  sandbox-test.sh  settings.json
assets/git-hooks/: pre-commit  pre-push
sandbox/: CLAUDE.md  Cargo.toml  Containerfile  settings.json
sandbox/src/: main.rs
src/: main.rs
src/assets/: .gitconfig  Containerfile  claude.json  sandbox-checks.py  sandbox-tools.py  settings.json
src/sandbox/: CLAUDE.md  Containerfile  settings.json
