[package]
name = "claude-sandbox"
description = "Run Claude Code in isolated Apple container VMs with automatic keychain authentication"
version = "0.1.0"
authors = ["Aldrin J D'Souza <code@aldrin.co>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/aldrin/claude-sandbox"
repository = "https://github.com/aldrin/claude-sandbox"
keywords = ["claude", "sandbox", "container", "macos", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
