[package]
name = "claude-sandbox"
description = "Run Claude Code in isolated Apple container VMs with automatic keychain authentication"
readme = "../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
